# django-w-careers

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
careers/: __init__.py  apps.py
careers/api/: __init__.py  apps.py  urls.py
careers/apps/: __init__.py  mixins.py  signals.py
careers/apps/categories/: __init__.py  apps.py  models.py
careers/apps/categories/migrations/: 0001_initial.py
careers/apps/categories/tests/: __init__.py  test_models.py
careers/apps/home/: apps.py  models.py
careers/apps/home/tests/: __init__.py  test_models.py
careers/apps/indexes/: __init__.py  apps.py  models.py
careers/apps/indexes/migrations/: 0001_initial.py  0002_alter_careersindex_content.py
careers/apps/indexes/tests/: __init__.py  test_models.py
careers/apps/jobs/: __init__.py  apps.py  models.py
careers/apps/jobs/migrations/: 0001_initial.py  0002_initial.py  0003_alter_job_details.py
careers/apps/jobs/tests/: __init__.py  test_models.py
careers/apps/tags/: apps.py  models.py
careers/apps/tags/migrations/: 0001_initial.py
careers/cms/: __init__.py  apps.py  blocks.py
careers/locale/ar/LC_MESSAGES/: django.po
careers/locale/cn/LC_MESSAGES/: django.po
careers/locale/es/LC_MESSAGES/: django.po
careers/locale/tr/LC_MESSAGES/: django.po
careers/ui/: __init__.py  apps.py  forms.py  mixins.py  urls.py  views.py
careers/ui/static/careers/: README.md  package.json
careers/ui/templates/careers/: base.html  category.html  index.html  (+5 more)
careers/ui/templatetags/: careers.py
(+9 files in other folders)
